[package]
name = "damm"
version = "0.1.0"
authors = ["loksam <loksam.jp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.6"
imageproc = "0.20.0"
rusttype = "0.8.3"
structopt = { version = "0.3", default-features = false }